--- a/ReservationAdmin/Component/Message.razor
+++ b/ReservationAdmin/Component/Message.razor
@@ -62,7 +62,7 @@
             </div>
             <div class="modal-body">
                 <p>
-                    Reservering is aangemaakt.Een mail wordt verzonden om je reservering te bevestigen
+                    Reservering is aangemaakt.
                 </p>
             </div>
             <div class="modal-footer">
